# sdl-learning

./: CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: main.cpp.1B5C13F1365C5D44.idx
assets/: Draw.bmp:Zone.Identifier
lib/SDL2/: SDL_image.h
src/: .class2.cpp.swp  class1.cpp  class2.cpp  class3.cpp  main.cpp
tutorial_sdl/: .Event_Driven_Programming.txt.swp  .Getting_an_Image_on_the_Screen.txt.swp  .Hello_SDL.txt.swp  Event_Driven_Programming.txt  Getting_an_Image_on_the_Screen.txt  Hello_SDL.txt
